<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dip">
    <TextView
        android:id="@+id/about_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_about"
        />

    <Button
        android:id="@+id/map_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_button" />
    <Button
        android:id="@+id/dining_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dining_button" />
    <Button
        android:id="@+id/parking_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/parking_button" />

</LinearLayout>